skillSwap: Docker Implementation

--- a/.env.example
+++ b/.env.example
@@ -4,17 +4,33 @@ PORT=3000
 
 # MongoDB
 MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
+MONGO_ROOT_USERNAME=root
+MONGO_ROOT_PASSWORD=rootpassword
 
 # JWT
 # These should be actual RSA private/public key pairs for production
 JWT_PRIVATE_KEY=your_private_key_here
 JWT_PUBLIC_KEY=your_public_key_here
+JWT_SECRET=your_jwt_secret_here
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_here
 JWT_ACCESS_EXPIRY=1h
 JWT_REFRESH_EXPIRY=7d
+JWT_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=7d
 
 # OTP
 OTP_SECRET=your_otp_secret_here
 OTP_EXPIRY=10m
+
+# Email
+EMAIL_FROM=noreply@skillswap.com
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your_smtp_user
+SMTP_PASS=your_smtp_password
+
+# Messages
+MESSAGE_HASH_SECRET=your_message_hash_secret_here
 
 # Services
 AUTH_SERVICE_URL=http://localhost:3001
@@ -22,6 +38,7 @@ PROJECTS_SERVICE_URL=http://localhost:3002
 BIDS_SERVICE_URL=http://localhost:3003
 MESSAGES_SERVICE_URL=http://localhost:3004
 NOTIFICATIONS_SERVICE_URL=http://localhost:3005
+FRONTEND_URL=http://localhost:5173
 
 # Logging
 LOG_LEVEL=info
