--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
