SkillSwap Redis IMplementation

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,15 @@ JWT_REFRESH_EXPIRES_IN=7d
 OTP_SECRET=your_otp_secret_here
 OTP_EXPIRY=10m
 
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_PREFIX=skillswap:
+REDIS_CACHE_TTL=3600
+JWT_REFRESH_EXPIRY_SECONDS=604800
+
 # Email
 EMAIL_FROM=noreply@skillswap.com
 SMTP_HOST=smtp.example.com
