--- a/services/auth/.env.example
+++ b/services/auth/.env.example
@@ -19,3 +19,11 @@ OTP_EXPIRY=10m
 
 # Logging
 LOG_LEVEL=info
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_PREFIX=skillswap_auth:
+REDIS_CACHE_TTL=3600
