--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -11,8 +11,18 @@ RUN npm ci --only=production
 # Copy app source
 COPY . .
 
+# Create logs directory
+RUN mkdir -p logs
+
 # Expose port
 EXPOSE 3001
+
+# Set environment variables for Redis
+ENV REDIS_HOST=redis \
+    REDIS_PORT=6379 \
+    REDIS_DB=0 \
+    REDIS_PREFIX=skillswap_auth: \
+    REDIS_CACHE_TTL=3600
 
 # Start the app
 CMD ["node", "src/index.js"]
