SkillSwap Voice feature implemented

--- a/api-gateway/.env.example
+++ b/api-gateway/.env.example
@@ -9,6 +9,7 @@ PROJECTS_SERVICE_URL=http://localhost:3002
 BIDS_SERVICE_URL=http://localhost:3003
 MESSAGES_SERVICE_URL=http://localhost:3004
 NOTIFICATIONS_SERVICE_URL=http://localhost:3005
+VOICE_SEARCH_SERVICE_URL=http://localhost:3006
 
 # Frontend
 FRONTEND_URL=http://localhost:5173
