--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -191,6 +191,42 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  # Voice Search Service
+  voice-search-service:
+    build:
+      context: ./services/voice-search
+      dockerfile: Dockerfile
+    container_name: voice-search-service
+    restart: always
+    ports:
+      - "3006:3006"
+    environment:
+      - ENVIRONMENT=production
+      - DEBUG=False
+      - PORT=3006
+      - MONGO_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongodb:27017/skillswap_voice_search?authSource=admin
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=1
+      - REDIS_PREFIX=skillswap_voice_search:
+      - REDIS_CACHE_TTL=3600
+      - AUTH_SERVICE_URL=http://auth-service:3001
+      - PROJECTS_SERVICE_URL=http://projects-service:3002
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - SPEECH_RECOGNITION_LANGUAGE=en-US
+    depends_on:
+      - mongodb
+      - redis
+      - auth-service
+      - projects-service
+    networks:
+      - skillswap-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
   # API Gateway
   api-gateway:
     build:
@@ -208,6 +244,7 @@ services:
       - BIDS_SERVICE_URL=http://bids-service:3003
       - MESSAGES_SERVICE_URL=http://messages-service:3004
       - NOTIFICATIONS_SERVICE_URL=http://notifications-service:3005
+      - VOICE_SEARCH_SERVICE_URL=http://voice-search-service:3006
       - FRONTEND_URL=${FRONTEND_URL}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
     depends_on:
@@ -216,6 +253,7 @@ services:
       - bids-service
       - messages-service
       - notifications-service
+      - voice-search-service
     networks:
       - skillswap-network
     logging:
