skillswap: stripe conf

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?r
 MONGO_ROOT_USERNAME=root
 MONGO_ROOT_PASSWORD=rootpassword
 
+# PostgreSQL
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=skillswap_payments
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/skillswap_payments
+
 # JWT
 # These should be actual RSA private/public key pairs for production
 JWT_PRIVATE_KEY=your_private_key_here
@@ -47,7 +53,19 @@ PROJECTS_SERVICE_URL=http://localhost:3002
 BIDS_SERVICE_URL=http://localhost:3003
 MESSAGES_SERVICE_URL=http://localhost:3004
 NOTIFICATIONS_SERVICE_URL=http://localhost:3005
+VOICE_SEARCH_SERVICE_URL=http://localhost:3006
+PAYMENT_SERVICE_URL=http://localhost:3007
 FRONTEND_URL=http://localhost:5173
 
 # Logging
 LOG_LEVEL=info
+
+# Stripe
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_ACCOUNT_COUNTRY=US
+
+# Supabase
+SUPABASE_URL=your_supabase_url
+SUPABASE_KEY=your_supabase_key
+SUPABASE_JWT_SECRET=your_supabase_jwt_secret
