--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -254,6 +254,7 @@ services:
       - JWT_PUBLIC_KEY=skillswap_jwt_public_key_development
       - JWT_PRIVATE_KEY=skillswap_jwt_private_key_development
       - STRIPE_SECRET_KEY=your_stripe_secret_key
+      - STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
       - STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
       - STRIPE_ACCOUNT_COUNTRY=US
       - AUTH_SERVICE_URL=http://auth-service:3001
