--- a/services/payment-service/.env.example
+++ b/services/payment-service/.env.example
@@ -17,6 +17,7 @@ JWT_PRIVATE_KEY=your_jwt_private_key
 
 # Payment Providers
 STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 STRIPE_ACCOUNT_COUNTRY=US
 
